# CmakeRef

./: .gitignore  Readme.md
Esempio1/: CMakeLists.txt  Readme.md  main.cpp
Esempio1/lib1/: CMakeLists.txt  func1.cpp  func1.h
Esempio2/: CMakeLists.txt  main.cpp
Esempio2/src/: classification.cpp  classification.h  modelInterface.h
Esempio3/: CMakeLists.txt  main.cpp
Esempio5/opecvAnalisiCmake/: openCVConfig.cmake
JsonCpp/: CMakeLists.txt  main.cpp  main.py  vcpkg.json
JsonCpp/yolo/: results_yolo.json
